2010-02-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:

	- Undo change of vector arguments to matrices, because we can do
	the optimisation on the sole vector, and then recompute the
	rotation matrix.

	But keep renaming of function being used by this function.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- Force NRRD data to be double, otherwise interpolation for the
	intersection doesn't work.

	* PointsToolbox/scinrrd_pca.m:

	- Remove assumption that NRRD will have dummy dimension, because
	it could have been removed by a previous scinrrd function.

	* FiltersToolbox/scinrrd_vertical_rot3.m:

	- Replace code block by scinrrd_vertical_rot3().

	- Add input argument so that you can select whether the rotation
	is forwards or backwards.

	* PointsToolbox/scinrrd_pca.m:

	- Compute centroid as output argument.

	* Rename scirunnrrd_world2index.m as
	scinrrd_world2index.m. Correct variables and help header for
	consistency with the rest of scinnrd functions.

	* Rename scirunnrrd_index2world.m as
	scinrrd_index2world.m. Correct variables and help header for
	consistency with the rest of scinnrd functions.

	* Rename scirunnrrd_pca.m as scinrrd_pca.m. Correct variables and
	help header for consistency with the rest of scinnrd functions.

	* Rename scirunnrrd_vertical_rot3.m as
	scinrrd_vertical_rot3. Correct help header. Correct variables and
	help header for consistency with the rest of scinnrd functions.

2010-02-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Rename FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m as
	FiltersToolbox/scinrrd_optimal_intersecting_plane.m.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- When sampling with interpn(), it is necessary to provide the
	grid matrices in the same order as they are generated by ndgrid().

	* Add FileFormatToolbox/scinrrd_seg3d2matlab.m:

	- SCINRRD_SEG3D2MATLAB Correct dimensions of data loaded from SCI